<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zoomagazin.eu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="forward">Напред</string>
    <string name="welcome">Добре дошли!</string>
    <string name="title_activity_choose">Изберете домашен любимец</string>
    <string name="news">Новини</string>
    <string name="new_products">Нови продукти</string>
    <string name="sales">Разпродажби</string>
    <string name="promotions">Промоции</string>
    <string name="title_activity_options">Опции</string>
    <string name="for_dogs">За кучето</string>
    <string name="go_to_site">Към новината в сайта</string>
    <string name="go_to_site_product">Купете продукта тук</string>
    <string name="for_cats">За котката</string>
    <string name="for_birds">За птиците</string>
    <string name="for_little_animals">За малките животни</string>
    <string name="for_aqua">За акваристиката</string>
    <string name="for_terra">За тераристиката</string>
    <string name="title_activity_new_products">Продукти</string>
    <string name="title_activity_single_news">Продукт</string>
    <string name="title_activity_single_product">Продукт</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_products">Продукти</string>

</resources>
