<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity" >
    
     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/header" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient"
        android:onClick="Promotions"
        android:text="@string/promotions"
        android:textColor="#688712"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient"
        android:onClick="Sales"
        android:text="@string/sales"
        android:textColor="#688712"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="16dp"
        android:background="@drawable/gradient"
        android:onClick="News"
        android:text="@string/news"
        android:textColor="#688712"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="38dp"
        android:background="@drawable/gradient"
        android:onClick="NewProducts"
        android:text="@string/new_products"
        android:textColor="#688712"
        android:textSize="30sp"
        android:textStyle="italic" />

</RelativeLayout>
